// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Students {
  id            Int     @default(autoincrement()) @id
  surname       String
  name          String
  middle_name   String
  date_of_birth DateTime
  gender        String
  group_id      Int
  group         Groups @relation(fields: [group_id], references: [id], onDelete: Cascade)
  statements    Statements[]
  document_number String
}

model Groups {
  id Int @default(autoincrement()) @id
  group_number Int
  group_cipher String
  start_study_year Int
  students     Students[]
  speciality_id Int @default(0)
  speciality Specialities @relation(fields: [speciality_id], references: [id], onDelete: Cascade)
}

model Disciplines {
  id Int @default(autoincrement()) @id
  name String
  learning_plan_contents Learning_plan_content[]
}

model Statements {
  id Int @default(autoincrement()) @id
  date_of_issue DateTime
  mark Int?
  student_id Int
  student Students @relation(fields: [student_id], references: [id], onDelete: Cascade)
  learning_plan_content_id Int
  learning_plan_content Learning_plan_content @relation(fields: [learning_plan_content_id], references: [id], onDelete: Cascade)
}

model Users {
  id Int @default(autoincrement()) @id
  login String @unique
  password String
  role String
}

model Specialities {
  id Int @default(autoincrement()) @id
  name String @unique
  learning_plans Learning_plan[]
  groups Groups[]
}

model Learning_plan_content {
  id Int @default(autoincrement()) @id
  discipline_id Int
  discipline Disciplines @relation(fields: [discipline_id], references: [id], onDelete: Cascade)
  learning_plan_id Int
  learning_plan Learning_plan @relation(fields: [learning_plan_id], references: [id], onDelete: Cascade)
  number_of_hours Int
  attestation_type String
  semester Int
  statements Statements[]
}

model Learning_plan {
  id Int @default(autoincrement()) @id
  speciality_id Int
  speciality Specialities @relation(fields: [speciality_id], references: [id], onDelete: Cascade)
  learning_plan_contents Learning_plan_content[]
  start_study_year Int
}